--- a/collection.html
+++ b/collection.html
@@ -541,13 +541,24 @@
        </div>
      </div>
    </div>
+   <div class="socials">
+    <a href="https://www.facebook.com/altclothingofficial" target="_blank">
+    <i class="fa fa-facebook" style="font-size:20px;color:rgb(255, 255, 255)"></i></a>
+    <a href="https://www.youtube.com/channel/UCakqlbbcAn3LnIfNaJsrm9Q" target="_blank">
+    <i class="fa fa-youtube-play" style="font-size:20px;color:rgb(255, 255, 255)"></i></a>
+    <a href="https://www.instagram.com/altclothingofficial/" target="_blank">
+    <i class="fa fa-instagram" style="font-size:20px;color:rgb(255, 255, 255)"></i></a>
+    <a href="https://twitter.com/altclothing1" target="_blank">
+    <i class="fa fa-twitter" style="font-size:20px;color:rgb(255, 255, 255)"></i></a>
+  </div>
   <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
   <div class="mini-logo">
    <img src="images/alt-logo-website.png" width="90" height="93">
   </div>
  </footer>
  
- <script src="back-to-top.js"></script>
+
+<script src="back-to-top.js"></script>
 <script async src="https://cdn.snipcart.com/themes/v3.0.31/default/snipcart.js"></script>
 <div hidden id="snipcart" data-api-key="OTkxMWM5YTYtYTIwMy00NzIwLWI2YzQtZjE5YzBkZWNjZDEyNjM3NTA1NzczNDYzOTMwMzQw" data-config-modal-style="side"></div>
 </body>
