sizes dropdown changed (now working)

--- a/alt-logo-core-hoodie-white.html
+++ b/alt-logo-core-hoodie-white.html
@@ -159,17 +159,20 @@
     </div></br>
      
   <div class="dropdown-wrapper">
-    <div class="custom-select" style="width:155px;">
-        <select>
-          <option value="0">SELECT SIZE:</option>
-          <option value="1">SMALL</option>
-          <option value="2">MEDIUM</option>
-          <option value="3">LARGE</option>
-          <option value="4">EXTRA LARGE</option>
-          <option value="5">XX LARGE</option>
-        </select>
-      </div>
-    </div></br></br>
+    <div class="dropdown" >
+      <select id="size" class="sizes" style="width:115px;height:35px">
+        <option>small</option
+        >>
+        <option>medium</option
+        >>
+        <option>large</option>
+        >>
+        <option>X large</option>
+        >>
+        <option>XX large</option>
+      </select>
+    </div>
+  </div>
    
    <div class="buy-buttons">
     <button class="btn basket snipcart-add-item"
@@ -178,10 +181,8 @@
      data-item-name="ALT LOGO CORE HOODIE - WHITE"
      data-item-image="images/alt-logo-hoodie-1.png"
      data-item-custom1-name="size"
-     data-item-custom1-options="small|medium|large|extra large|XX large">
-    ADD TO CART</button>
-     
-   </div></br></br></br>
+     data-item-custom1-options="small|medium|large|X large|XX large">ADD TO CART</button>
+   </div></br></br>
  
     <div class="sizing-guides1">
      <a href="sizing-guides.html" target="_blank">Sizing Guides</a>
