--- a/new-in.html
+++ b/new-in.html
@@ -105,10 +105,10 @@
               <a href="alt-logo-core-hoodie-black.html">
                 <img src="images/alt-logo-hoodie-2.png" width="338" height="225">
                 <img class="Sirv image-hover" src="images/image_unavailable.png" width="338" height="225">
-              </div></a>
+              </div>
       
          <div class="subtitle1">
-           </br> Alt Logo Core Hoodie ¬ Black
+           </br> Alt Logo Core Hoodie ¬ Black</a>
            </div>
            <div class="price2">
           </br> £40.00 </br></br></br></br>
@@ -124,10 +124,10 @@
               <a href="alt-logo-core-hoodie-white.html">
                 <img src="images/alt-logo-hoodie-1.png" width="338" height="225">
                 <img class="Sirv image-hover" src="images/image_unavailable.png" width="338" height="225">
-              </div></a>
+              </div>
       
          <div class="subtitle1">
-           </br> Alt Logo Core Hoodie ¬ White
+           </br> Alt Logo Core Hoodie ¬ White</a>
            </div>
            <div class="price2">
           </br> £40.00 </br></br></br></br>
