--- a/sweatshirts.html
+++ b/sweatshirts.html
@@ -105,10 +105,10 @@
                   <a href="alt-logo-core-sweater-grey.html">
                     <img src="images/alt-sweater-1.png" width="338" height="225">
                     <img class="Sirv image-hover" src="images/image_unavailable.png" width="338" height="225">
-                  </div></a>
+                  </div>
           
              <div class="subtitle1">
-               </br> Alt Logo Core Sweater ¬ Grey
+               </br> Alt Logo Core Sweater ¬ Grey</a>
                </div>
                <div class="price2">
               </br> £30.00 </br></br></br></br>
@@ -124,10 +124,10 @@
               <a href="alt-logo-core-sweater-black.html">
                 <img src="images/alt-logo-core-sweater-black.png" width="338" height="225">
                 <img class="Sirv image-hover" src="images/image_unavailable.png" width="338" height="225">
-              </div></a>
+              </div>
       
          <div class="subtitle1">
-           </br> Alt Logo Core Sweater ¬ Black
+           </br> Alt Logo Core Sweater ¬ Black</a>
            </div>
            <div class="price2">
           </br> £30.00 </br></br></br></br>
