change of hoodie pics + real model pics
real pictures of the products added to the website

--- a/support.html
+++ b/support.html
@@ -90,7 +90,10 @@
       </br>
         <div class="about-section">
           <p>At the moment we are only shipping our products to the UK because of the expenses involved with shipping abroad and new EU tax laws, however we are planning on expanding
-            to Europe and the US in the near future.</br></br>
+            to Europe and the US in the near future.</br></br></br>
+
+            <b>Shipping delays:</b> Please allow for up to 1/2 weeks of shipping time between purchasing and receiving your order in order to account for product processing on our end and
+            days off such as Sundays and bank holidays.</br></br></br>
 
             <b>Import Fees:</b> We cannot be held responsible for the payment of any Customs Duty/Import fees that may be a result of purchasing from our store – this is the 
             full responsibility of the customer. Please ensure you are aware of and well versed in the imports regulations in your region.</br></br>
