--- a/alt-polaroid-oversized-tee-black.html
+++ b/alt-polaroid-oversized-tee-black.html
@@ -190,7 +190,7 @@
           <div class="logo-wrapper">
             <a href="alt-logo-core-hoodie-black.html">
               <img src="images/alt-logo-hoodie-2.png" width="338" height="225">
-              <img class="Sirv image-hover" src="images/image_unavailable.png" width="338" height="225">
+              <img class="Sirv image-hover" src="images/hoodie-model-2.png" width="338" height="225">
             </div>
 
        <div class="subtitle1">
@@ -209,7 +209,7 @@
           <div class="logo-wrapper">
             <a href="alt-logo-core-hoodie-white.html">
               <img src="images/alt-logo-hoodie-1.png" width="338" height="225">
-              <img class="Sirv image-hover" src="images/image_unavailable.png" width="338" height="225">
+              <img class="Sirv image-hover" src="images/hoodie-model-1.png" width="338" height="225">
             </div>
     
        <div class="subtitle1">
