--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div class="announcement">
-    <p class="announcement__text">Official launch 1st September 2021 / DO NOT BUY ANYTHING BEFORE THEN</p>
+    <p class="announcement__text">Welcome to Alt. Clothing | Only UK shipping available</p>
   </div>
 
   <div class="container">
@@ -175,7 +175,7 @@
             <div class="logo-wrapper">
               <a href="alt-logo-core-hoodie-black.html">
                 <img src="images/alt-logo-hoodie-2.png" width="338" height="225">
-                <img class="Sirv image-hover" src="images/image_unavailable.png" width="338" height="225">
+                <img class="Sirv image-hover" src="images/hoodie-model-2.png" width="338" height="225">
               </div>
 
          <div class="subtitle1">
@@ -194,7 +194,7 @@
             <div class="logo-wrapper">
               <a href="alt-logo-core-hoodie-white.html">
                 <img src="images/alt-logo-hoodie-1.png" width="338" height="225">
-                <img class="Sirv image-hover" src="images/image_unavailable.png" width="338" height="225">
+                <img class="Sirv image-hover" src="images/hoodie-model-1.png" width="338" height="225">
               </div>
 
          <div class="subtitle1">
@@ -207,7 +207,7 @@
    </div>
    
       <div class="collection-item-wrapper">
-        <div class="collection-img-background" style="background-image:url(images/alt-t-shirt-1.png)"></div>
+        <div class="collection-img-background"></div>
     
          <div class="img-text-wrapper">
             <div class="logo-wrapper">
@@ -226,26 +226,26 @@
   </div>
 
   <div class="collection-item-wrapper">
-    <div class="collection-img-background" style="background-image:url(images/be-the-change-t-shirt-1.png)"></div>
-
+    <div class="collection-img-background"></div>
+  
      <div class="img-text-wrapper">
         <div class="logo-wrapper">
-          <a href="the-change-logo-tee-black.html">
-            <img src="images/be-the-change-t-shirt-1.png" width="338" height="225">
+          <a href="be-the-change-hoodie.html">
+            <img src="images/be-the-change-hoodie-1.png" width="338" height="225">
             <img class="Sirv image-hover" src="images/image_unavailable.png" width="338" height="225">
           </div>
-    
-          <div class="subtitle1">
-           </br> The Change Logo Tee ¬ Black</a>
+  
+     <div class="subtitle1">
+       </br> Be the change Hoodie ¬ Black</a>
       </div>
       <div class="price2">
-      </br> £20.00 </br></br></br></br>
+       </br> £40.00 </br></br></br></br>
+      </div>
      </div>
    </div>
- </div>
 
  <div class="collection-item-wrapper">
-  <div class="collection-img-background" style="background-image:url(images/be-the-change-hoodie-3.png)"></div>
+  <div class="collection-img-background"></div>
 
    <div class="img-text-wrapper">
       <div class="logo-wrapper">
@@ -268,19 +268,19 @@
 
    <div class="img-text-wrapper">
       <div class="logo-wrapper">
-        <a href="be-the-change-hoodie.html">
-          <img src="images/be-the-change-hoodie-1.png" width="338" height="225">
+        <a href="the-change-logo-tee-black.html">
+          <img src="images/be-the-change-t-shirt-1.png" width="338" height="225">
           <img class="Sirv image-hover" src="images/image_unavailable.png" width="338" height="225">
         </div>
-
-   <div class="subtitle1">
-     </br> Be the change Hoodie ¬ Black</a>
+  
+        <div class="subtitle1">
+         </br> The Change Logo Tee ¬ Black</a>
     </div>
     <div class="price2">
-     </br> £40.00 </br></br></br></br>
-    </div>
+    </br> £20.00 </br></br></br></br>
    </div>
  </div>
+</div>
 
 </div>
 
