--- a/the-change-logo-hoodie-black.html
+++ b/the-change-logo-hoodie-black.html
@@ -75,7 +75,7 @@
 
     <div class="mySlides2">
       <div class="numbertext"></div>
-      <img src="images/be-the-change-hoodie-4.png" style="width:100%">
+      <img src="images/WWW-be-the-change-hoodie-4.png" style="width:100%">
     </div>
 
     <div class="mySlides2">
@@ -115,7 +115,7 @@
 
     <!-- Thumbnail image controls -->
     <div class="column3">
-      <img class="demo" src="images/be-the-change-hoodie-4.png" width="150" height="100" onclick="currentSlide(1)">
+      <img class="demo" src="images/WWW-be-the-change-hoodie-4.png" width="150" height="100" onclick="currentSlide(1)">
     </div>
 
     <div class="column3">
@@ -189,7 +189,7 @@
     <!-- Thumbnail images -->
     <div class="row1">
       <div class="column1">
-        <img class="demo cursor" src="images/be-the-change-hoodie-4.png" style="width:100%" onclick="currentSlide(1)">
+        <img class="demo cursor" src="images/WWW-be-the-change-hoodie-4.png" style="width:100%" onclick="currentSlide(1)">
       </div>
       <div class="column1">
         <img class="demo cursor" src="images/image_unavailable.png" style="width:100%" onclick="currentSlide(2)">
@@ -262,7 +262,7 @@
           <div class="logo-wrapper">
             <a href="alt-logo-core-hoodie-black.html">
               <img src="images/alt-logo-hoodie-2.png" width="338" height="225">
-              <img class="Sirv image-hover" src="images/image_unavailable.png" width="338" height="225">
+              <img class="Sirv image-hover" src="images/hoodie-model-2.png" width="338" height="225">
             </div>
 
        <div class="subtitle1">
@@ -281,7 +281,7 @@
           <div class="logo-wrapper">
             <a href="alt-logo-core-hoodie-white.html">
               <img src="images/alt-logo-hoodie-1.png" width="338" height="225">
-              <img class="Sirv image-hover" src="images/image_unavailable.png" width="338" height="225">
+              <img class="Sirv image-hover" src="images/hoodie-model-1.png" width="338" height="225">
             </div>
     
        <div class="subtitle1">
