--- a/support.html
+++ b/support.html
@@ -77,12 +77,32 @@
         <div class="about-section">
           <p>Please contact us as soon as possible to make amendments to your orders or if you are having issues with your order. We will do our best to make the requested changes
             and/or fixes to your order as soon as possible. However, once an order has entered the processing stage amendments can no longer be made. If you wish to return your 
-            product(s) please refer to the "returns" section listed further down. </br></br>If you wish to contact us, simply email us at: </br><u><a href="mailto:alt.clothing21@gmail.com">
+            product(s) please refer to the "returns" section listed further down. </br></br>If you wish to contact us, please fill in this contact form or simply email us at: </br><u><a href="mailto:alt.clothing21@gmail.com">
              alt.clothing21@gmail.com</a>
             </u></p>
           </div>    
        </div>
       </br>
+
+    <div class="contact-form">
+      <form id="fcf-form-id" class="fcf-form-class" method="post" action="https://formsubmit.co/alt.clothing21@gmail.com">
+
+      <div class="two-col">
+        <div class="col1">
+       <input type="text" id="fname" name="firstname" placeholder="NAME" required>
+      </div>
+      <div class="col2">
+       <input type="text" id="email" name="email" placeholder="EMAIL" required>
+      </div>
+       <input type="text" id="" placeholder="SUBJECT" required>
+
+      <textarea id="subject" name="subject" placeholder="MESSAGE" style="height:200px" required></textarea>
+    </div>
+    <input class="submit-button" type="submit" value="SUBMIT">
+    </div>
+    </form>
+  </div>
+
     <div class="contact-us-wrapper">
       <div class="shipping-section">
         <h3>Shipping</h3></div>
