photoshoot pictures added
website is officially complete!!!

--- a/alt-logo-core-hoodie-black.html
+++ b/alt-logo-core-hoodie-black.html
@@ -159,11 +159,11 @@
     </div></br>
      
   <div class="dropdown-wrapper">
-    <div class="dropdown" >
-      <select id="size" class="sizes" style="width:115px;height:35px">
-        <option>small</option
+    <div class="dropdown">
+      <select id="size" class="sizes" style="width:115px;height:41px">
+        <option>small</option>
         >>
-        <option>medium</option
+        <option>medium</option>
         >>
         <option>large</option>
         >>
