--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <link rel="icon" href="images/alt-logo-favicon.png">
       <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+      <meta name="viewport" content="width=device-width, initial-scale=1" /> 
       <link rel="preconnect" href="https://app.snipcart.com">
       <link rel="preconnect" href="https://cdn.snipcart.com">
       <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.31/default/snipcart.css" />
