--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
     <div class="nav-wrapper">
       <div class="center-side"> 
              <div class="nav-link-wrapper active-nav-link">
-              <a href="index.html">Home</a>
+              <a href="index">Home</a>
             </div>
               
              <div class="nav-link-wrapper">
-              <a href="collection.html">Collection</a>
+              <a href="collection">Collection</a>
             </div>
             
              <div class="nav-link-wrapper">
-              <a href="lookbook.html">Lookbook</a>
+              <a href="lookbook">Lookbook</a>
             </div>
 
               <div class="nav-link-wrapper">
-              <a href= "support.html">Support</a>
+              <a href= "support">Support</a>
            </div>
         </div>
      </div>
