html link hotfix (incomplete)

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
        </button></a>
       </div>
        <div class="logo">
-         <a href="index.html">
+         <a href="index">
          <img class="main" src="images/alt-logo-website.png" width="138" height="145"/>
          <img class="glow" src="images/alt-logo-website.png" width="138" height="145"/> 
        </a></div>
