--- a/lookbook.html
+++ b/lookbook.html
@@ -36,7 +36,7 @@
        </button></a>
       </div>
        <div class="logo">
-         <a href="index.html">
+         <a href="index">
           <img class="main" src="images/alt-logo-website.png" width="138" height="145"/>
           <img class="glow" src="images/alt-logo-website.png" width="138" height="145"/> 
        </a></div>
@@ -46,19 +46,19 @@
     <div class="nav-wrapper">
       <div class="center-side"> 
              <div class="nav-link-wrapper">
-              <a href="index.html">Home</a>
+              <a href="index">Home</a>
             </div>
               
              <div class="nav-link-wrapper">
-              <a href="collection.html">Collection</a>
+              <a href="collection">Collection</a>
             </div>
             
              <div class="nav-link-wrapper active-nav-link">
-              <a href="lookbook.html">Lookbook</a>
+              <a href="lookbook">Lookbook</a>
             </div>
 
               <div class="nav-link-wrapper">
-              <a href= "support.html">Support</a>
+              <a href= "support">Support</a>
            </div>    
         </div>
      </div>
