--- a/collection.html
+++ b/collection.html
@@ -73,23 +73,23 @@
     <div class="index-wrapper">
       <div class="left-side"> 
              <div class="index-link-wrapper">
-              <a href="new-in.html"> New In</a>
+              <a href="new-in"> New In</a>
             </div>
               
              <div class="index-link-wrapper">
-              <a href="t-shirts.html">T-Shirts</a>
+              <a href="t-shirts">T-Shirts</a>
             </div>
             
              <div class="index-link-wrapper">
-              <a href="hoodies.html">Hoodies</a>
+              <a href="hoodies">Hoodies</a>
             </div>
 
               <div class="index-link-wrapper">
-              <a href= "sweatshirts.html">Sweatshirts</a>
+              <a href= "sweatshirts">Sweatshirts</a>
            </div>    
 
              <div class="index-link-wrapper">
-              <a href= "all.html">All</a>
+              <a href= "all">All</a>
            </div>  
         </div>
      </div>
