--- a/alt-logo-core-hoodie-black.html
+++ b/alt-logo-core-hoodie-black.html
@@ -299,10 +299,10 @@
 <footer>
   <div class="footer-wrapper">
   <div class="other-stuff">
-   <p><a href= "support.html">Refund Policy</a><br>
-    <a href="sizing-guides.html" target="_blank">Size Guides</a></br>
+   <p><a href= "support">Refund Policy</a><br>
+    <a href="sizing-guides" target="_blank">Size Guides</a></br>
     <a href="mailto:alt.clothing21@gmail.com">Contact Us</a></p>
-    <a href="all.html">All Products</a></p>
+    <a href="all">All Products</a></p>
  </div>
 <div class= "copyright-wrapper">
   <div class="copyright">
