--- a/alt-logo-core-hoodie-white.html
+++ b/alt-logo-core-hoodie-white.html
@@ -146,7 +146,7 @@
   <div class="product-description">
       <p1>- The alternative core collection hoodie in white</br></br>
 
-        - Black hoodie with the "Alt." logo embroidered in black on the</br>left breast</br></br>
+        - White hoodie with the "Alt." logo embroidered in black on the</br>left breast</br></br>
         
         - Cotton drawstrings with metal aglets to finish</br></br>
         
