--- a/alt-logo-core-hoodie-black.html
+++ b/alt-logo-core-hoodie-black.html
@@ -180,6 +180,7 @@
    data-item-price="40.00"
    data-item-name="ALT LOGO CORE HOODIE - BLACK"
    data-item-image="images/WWW-alt-logo-hoodie-2.png"
+   data-item-url="https://alt-clothing.co.uk/alt-logo-core-hoodie-black"
    data-item-custom1-name="size"
    data-item-custom1-options="small|medium|large|X large|XX large">ADD TO CART</button>
    </div></br></br>
