website polishing - added actual size guide

--- a/alt-logo-core-hoodie-black.html
+++ b/alt-logo-core-hoodie-black.html
@@ -144,7 +144,7 @@
        <h2>Alt logo Core Hoodie - black</h2>
    </div></br>
   <div class="product-description">
-      <p1>- The alternative core collection hoodie in black</br></br>
+      <p1>- The alternative core collection hoodie in black / unixex fit</br></br>
 
         - Black hoodie with the "Alt." logo embroidered in white on the</br>left breast</br></br>
         
@@ -186,7 +186,7 @@
    </div></br></br>
  
     <div class="sizing-guides1">
-     <a href="sizing-guides.html" target="_blank">Sizing Guides</a>
+     <a href="sizing-guides" target="_blank">Sizing Guides</a>
      </div>
    </div>
  </div>
