--- a/alt-logo-core-hoodie-white.html
+++ b/alt-logo-core-hoodie-white.html
@@ -144,7 +144,7 @@
        <h2>Alt logo Core Hoodie - white</h2>
    </div></br>
   <div class="product-description">
-      <p1>- The alternative core collection hoodie in white</br></br>
+      <p1>- The alternative core collection hoodie in white / unixex fit</br></br>
 
         - White hoodie with the "Alt." logo embroidered in black on the</br>left breast</br></br>
         
