--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -31,7 +31,7 @@
           <span class="snipcart-items-count"></span>
         </button></a>
       <div class="logo">
-      <a href="file:///C:/Users/louk_/OneDrive/Documents/Alt%20Clothing%201st%20website/home.html">
+      <a href="home">
         <img class="main" src="images/alt-logo-website.png" width="138" height="145"/>
         <img class="glow" src="images/alt-logo-website.png" width="138" height="145"/> 
       </a> </div>
@@ -41,19 +41,19 @@
     <div class="nav-wrapper">
            <div class="center-side"> 
              <div class="nav-link-wrapper">
-              <a href="home.html">Home</a>
+              <a href="home">Home</a>
             </div>
               
              <div class="nav-link-wrapper">
-              <a href="collection.html">Collection</a>
+              <a href="collection">Collection</a>
             </div>
             
              <div class="nav-link-wrapper">
-              <a href="lookbook.html">Lookbook</a>
+              <a href="lookbook">Lookbook</a>
             </div>
 
               <div class="nav-link-wrapper">
-              <a href= "support.html">Support</a>
+              <a href= "support">Support</a>
             </div>    
        </div>
     </div>
