--- a/sizing-guides.html
+++ b/sizing-guides.html
@@ -32,7 +32,7 @@
         </button></a>
       </div>
       <div class="logo">
-      <a href="index.html">
+      <a href="index">
         <img class="main" src="images/alt-logo-website.png" width="138" height="145"/>
         <img class="glow" src="images/alt-logo-website.png" width="138" height="145"/> 
       </a> </div>
@@ -42,19 +42,19 @@
     <div class="nav-wrapper">
            <div class="center-side"> 
              <div class="nav-link-wrapper">
-              <a href="index.html">Home</a>
+              <a href="index">Home</a>
             </div>
               
              <div class="nav-link-wrapper">
-              <a href="collection.html">Collection</a>
+              <a href="collection">Collection</a>
             </div>
             
              <div class="nav-link-wrapper">
-              <a href="lookbook.html">Lookbook</a>
+              <a href="lookbook">Lookbook</a>
             </div>
 
               <div class="nav-link-wrapper active-nav-link">
-              <a href= "about.html">Support</a>
+              <a href= "about">Support</a>
             </div>    
        </div>
     </div>
@@ -74,7 +74,7 @@
   </div>
   </br>
   <div class="size-img-wrapper">
-      <img src="images/clothing-sizes.png" style="width:85%">
+      <img src="images/size-guide.png" style="width:85%">
     </div>
    </br> 
 
@@ -83,10 +83,10 @@
 <footer>
   <div class="footer-wrapper">
   <div class="other-stuff">
-   <p><a href= "support.html">Refund Policy</a><br>
-    <a href="sizing-guides.html" target="_blank">Size Guides</a></br>
+   <p><a href= "support">Refund Policy</a><br>
+    <a href="sizing-guides" target="_blank">Size Guides</a></br>
     <a href="mailto:alt.clothing21@gmail.com">Contact Us</a></p>
-    <a href="all.html">All Products</a></p>
+    <a href="all">All Products</a></p>
  </div>
 <div class= "copyright-wrapper">
   <div class="copyright">
