--- a/lookbook.html
+++ b/lookbook.html
@@ -230,7 +230,7 @@
      <p><a href= "support">Refund Policy</a><br>
       <a href="sizing-guides" target="_blank">Size Guides</a></br>
       <a href="mailto:alt.clothing21@gmail.com">Contact Us</a></p>
-      <a href="all.html">All Products</a></p>
+      <a href="all">All Products</a></p>
    </div>
   <div class= "copyright-wrapper">
     <div class="copyright">
