added international shipping

--- a/support.html
+++ b/support.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="announcement">
-    <p class="announcement__text">Only UK shipping available</p>
+    <p class="announcement__text">worldwide shipping available | fees may apply</p>
   </div>
   
     <div class="container">
@@ -109,12 +109,31 @@
         </div>
       </br>
         <div class="about-section">
-          <p>At the moment we are only shipping our products to the UK because of the expenses involved with shipping abroad and new EU tax laws, however we are planning on expanding
-            to Europe and the US in the near future.</br></br></br>
+          <p><b>Shipping fees:</b> Shipping fees for all countries can be found in the dropdown below. If your country is not on the list, please contact us via email form or Twitter
+            to see if we can ship it to you.</br></br>
+            <label for="cars">Select your shipping location to get a precise shipping cost:</br></label></div>
 
-            <b>Shipping delays:</b> Please allow for up to 1/2 weeks of shipping time between purchasing and receiving your order in order to account for product processing on our end and
-            days off such as Sundays and bank holidays.</br></br></br>
+            <div class="countries-wrapper">
+            <select name="countries" id="countries">
+              <option value="country">Choose a country</option>
+              <option value="country">-------</option>
+              <option value="country">United Kingdom (excludes Northern Ireland) - £3.00</option>
+              <option value="country">-------</option>
+              <option value="country">Ireland (includes Northern Ireland) - £14.61</option>
+              <option value="country">Germany - £12.80</option>
+              <option value="country">France - £13.24</option>
+              <option value="country">Spain - £16.84</option>
+              <option value="country">Sweden - £16.24</option>
+              <option value="country">Netherlands - £13.24</option>
+              <option value="country">Denmark - £15.88</option>
+              <option value="country">Norway - £22.39</option>
+              <option value="country">Italy - £17.40</option>
+              <option value="country">Canada - £28.17</option>
+              <option value="country">USA - £23.31</option>
+              <option value="country">Australia - £25.59</option>
+            </select></div></br>
 
+            <div class="about-section">
             <b>Import Fees:</b> We cannot be held responsible for the payment of any Customs Duty/Import fees that may be a result of purchasing from our store – this is the 
             full responsibility of the customer. Please ensure you are aware of and well versed in the imports regulations in your region.</br></br>
           
