--- a/collection.html
+++ b/collection.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="announcement">
-    <p class="announcement__text">Only UK shipping available</p>
+    <p class="announcement__text">worldwide shipping available | fees may apply</p>
   </div>
   
     <div class="container">
