--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div class="announcement">
-    <p class="announcement__text">Welcome to Alt. Clothing | Only UK shipping available</p>
+    <p class="announcement__text">worldwide shipping available | fees may apply</p>
   </div>
 
   <div class="container">
