snipcart phone number
added phone number to the shipping process of snipcart

--- a/lookbook.html
+++ b/lookbook.html
@@ -267,6 +267,15 @@
  <script src="back-to-top.js"></script>
 <script src="lookbook.js"></script>
 <script async src="https://cdn.snipcart.com/themes/v3.0.31/default/snipcart.js"></script>
-<div hidden id="snipcart" data-api-key="Mjg1ZGRlMTUtNGZmYi00OGUzLWIyNGItMTllYTRmNmY1MzdmNjM3Nzg3MTcwNTYwNzc0OTgy" data-config-modal-style="side"></div>
+<div hidden id="snipcart" data-api-key="Mjg1ZGRlMTUtNGZmYi00OGUzLWIyNGItMTllYTRmNmY1MzdmNjM3Nzg3MTcwNTYwNzc0OTgy" data-config-modal-style="side">
+  <billing section="bottom">
+    <fieldset class="snipcart-form__set">
+      <div class="snipcart-form__field">
+        <snipcart-label class="snipcart__font--tiny" for="phone">Phone number</snipcart-label>
+        <snipcart-input name="phone"></snipcart-input>
+      </div>
+    </fieldset>
+  </billing>
+</div>
 </body>
 </html>
