lineup fix for all devices
new aspect ratio system using % values adapted for most devices

--- a/the-change-logo-hoodie-black.html
+++ b/the-change-logo-hoodie-black.html
@@ -365,6 +365,8 @@
    <a href="https://www.termsandconditionsgenerator.com/live.php?token=Xrp9fBNsDrJBcaVLVRTAP6H0FADlxTz5" target="_blank">Terms and Conditions</a></br>
         Copyright © Alt. Clothing 2021 <br>
         Website Developed by Lucas Good</p>
+      </div>
+    </div>
        <div class="credit-cards">
          <i class="fa fa-credit-card" style="font-size:25px;color:rgb(255, 255, 255)"></i>
          <i class="fa fa-cc-visa" style="font-size:25px;color:rgb(255, 255, 255)"></i>
