--- a/collection.html
+++ b/collection.html
@@ -199,7 +199,7 @@
             <div class="logo-wrapper">
               <a href="the-change-logo-tee-black">
                 <img src="images/be-the-change-t-shirt-1.png" width="338" height="225">
-                <img class="Sirv image-hover" src="images/image_unavailable.png" width="338" height="225">
+                <img class="Sirv image-hover" src="images/t-shirt-model-2.png" width="338" height="225">
               </div>
       
          <div class="subtitle1">
