--- a/sizing-guides.html
+++ b/sizing-guides.html
@@ -74,7 +74,10 @@
   </div>
   </br>
   <div class="size-img-wrapper">
+    <h2>HOODIES</h2>
       <img src="images/size-guide.png" style="width:85%">
+      <h2>T-SHIRTS</h2>
+      <img src="images/size-guide-t-shirts.JPG" style="width:85%">
     </div>
    </br> 
 
