free uk shipping update

--- a/be-the-change-tee-black.html
+++ b/be-the-change-tee-black.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="announcement">
-    <p class="announcement__text">international shipping available | fees may apply</p>
+    <p class="announcement__text">free shipping for all orders to the UK! international shipping available | fees may apply</p>
   </div>
     <div class="container">
      <div class="brand">
